--- a/html.html
+++ b/html.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Здравствуйте дорогой пользователь! Не смею вас задерживать. Перед вами 3 картинки. Напишите, пожалуйста название героя on eng language в столбце снизу.</h1>
+    <h1>Здравствуйте дорогой пользователь! Не смею вас задерживать. Перед вами 3 картинки. Напишите, пожалуйста название героя на втором фото on eng language в столбце снизу.</h1>
     <p class="align-center">
         <img src="https://i.pinimg.com/originals/c7/e2/59/c7e25941503b43ccb5f013b6c51f8310.jpg" alt="Голова героя dota 2 - tinker">
         <img src="https://i.pinimg.com/originals/26/b3/2d/26b32dc498bde9570ad765cc3bc3677b.jpg" alt="Иконка героя dota 2 - Ogre Magi">
