--- a/html.html
+++ b/html.html
@@ -7,31 +7,68 @@
     <title>Document</title>
     <link rel="stylesheet" href="css.css">
     <style>
-        .align-center {
-            text-align: center;
+        TD.leftcol {
+    width: 120px; /* Ширина левой колонки с рисунком */
+    vertical-align: top; /* Выравнивание по верхнему краю */
         }
-    </style>
+        .content { position: relative; height: 400px; border: 1px }
+        .content div { position: absolute; width: 35%; padding: 10px; }
+        .blue { right: 20px; bottom: 0; background: #1c87c9; }
+        .green { top: 10px; left: 15px; background: #8ebf42; }
+      </style>
 </head>
 <body>
-    <h1>Здравствуйте дорогой пользователь! Не смею вас задерживать. Перед вами 3 картинки. Напишите, пожалуйста название героя на втором фото on eng language в столбце снизу.</h1>
-    <p class="align-center">
-        <img src="https://i.pinimg.com/originals/c7/e2/59/c7e25941503b43ccb5f013b6c51f8310.jpg" alt="Голова героя dota 2 - tinker">
-        <img src="https://i.pinimg.com/originals/26/b3/2d/26b32dc498bde9570ad765cc3bc3677b.jpg" alt="Иконка героя dota 2 - Ogre Magi">
-        <img src="https://s2.hostingkartinok.com/uploads/images/2012/06/131e1599b7713dd2169d51e44005f741.jpg" alt="Иконка героя dota 2 - Dazzle">
-    </p>
-    <div class="form-control">
-        <label for="name" id="label-name">
-            Ваш ответ
-        </label>
-    
-        <!-- Input Type Text -->
-        <input type="text" id="name" placeholder="name hero" />
-        <button type="submit" value="submit">
-            Submit
-        </button>
-        <h2>
-            Спасибо за ответ!
-            Чтобы узнать кто вы на самом деле прошу пойти по данной ссылке <a href="https://i.ytimg.com/vi/zubBmD49u20/hqdefault.jpg" >КТО ЖЕ ТЫ НА САМОМ ДЕЛЕ?</a>
-        </h2>
+    <div class="whiteBox1";>
+        <h1>Бесплатно <td class="leftcol"><img src="kepka.png" 
+            width="20" height="20"></h1>
+        <p>Бесплатная версия даёт возможность прикоснуться к основному функционалу приложения</p>
+        <ul>
+            <li>Кастомизация интерфейса под свой вкус;</li>
+            <li>Доска рисования для удобной работы;</li>
+            <li>Облачное хранилище объемом 15 Гб;</li>
+            <li>Ссылки для верификации пользователей;</li>
+            <li>Маски (ограниченое кол-во);</li>
+            <li>Виджеты, сделают пространство экономнее;</li>
+            <li>Планировщик (ограниченые инструменты);</li>
+            <li>Шумоподавление;</li>
+        </ul>
+        <h>₽0/мес</h>
+        <button type="button">Выбрать</button>;
+    </div>
+    <div class="whiteBox2";>
+        <h1>Студенческая <td class="leftcol"><img src="shlyapa.png" 
+            width="25" height="25"></h1>
+        <ul>
+            <li>Приватные чаты и каналы;</li>
+            <li>Облачное хранилище 30 Гб;</li>
+            <li>Синхронизация музыки с вашим аккаунтом;</li>
+            <li>Своя аудиотека, чтобы делиться с друзьйми;</li>
+            <li>Нет ограничений на длительность звонков;</li>
+            <li>Анонимный просмотр чатов/сообщений;</li>
+            <li>Статистика для вашего канала;</li>
+            <li>Приватные сервера;</li>
+            <li>Маски(расширенное кол-во)</li>
+        </ul>
+        <h2>₽99/мес</h2>
+        <button type="button">Выбрать</button>;
+    </div>
+
+    <div class="whiteBox3";>
+        <h1>Семейная <td class="leftcol"><img src="korona.png" 
+            width="20" height="20"></h1>
+        <ul>
+            <li>Совместное редактирование (расширенная версия);</li>
+            <li>Создавайте свою сводку правил;</li>
+            <li>Облачное хранилище объемом 50 Гб</li>
+            <li>Виджеты (расширенная версия);</li>
+            <li>Отображение тех, кто не подключился к конференции;</li>
+            <li>Отсутствие анонимного входа;</li>
+            <li>Продвинутое планирование для бизнеса;</li>
+            <li>Маски (расширенное кол-во);</li>
+            <li>Выберите правильный план для вашей работы!</li>
+        </ul>
+        <h3>₽299/мес</h3>
+        <button type="button">Выбрать</button>;
+    </div>
 </body>
 </html>
